--- a/css/style copy.css
+++ b/css/style copy.css
@@ -1,10 +1,11 @@
 /*******************************/
 /********* General CSS *********/
 /*******************************/
+@import url('https://fonts.googleapis.com/css2?family=Cairo:wght@200;300;400;500&display=swap');
 body {
     color: #666666;
     background: #dddddd;
-    font-family: 'Poppins', sans-serif;
+    font-family: 'Cairo', sans-serif;
     font-weight: 400;
 }
 
