--- a/css/style.css
+++ b/css/style.css
@@ -734,6 +734,7 @@ a:focus {
 
 .service .service-img img {
     width: 100%;
+    height: 350px;
 }
 
 .service .service-overlay {
@@ -784,13 +785,14 @@ a:focus {
 }
 
 .service .service-item a.btn {
-    width: 60px;
+    width: 350px;
     height: 60px;
     padding: 3px 0 0 3px;
     display: flex;
     align-items: center;
     justify-content: center;
-    font-size: 60px;
+    font-size: 30px;
+    font-weight: bold;
     line-height: 60px;
     font-weight: 100;
     color: #030f27;
@@ -2058,7 +2060,7 @@ a:focus {
 .footer {
     position: relative;
     margin-top: 45px;
-    padding-top: 90px;
+    padding-top: 10px;
     background: #030f27;
     color: #ffffff;
 }
